Set cron to run every 2 hours.

--- a/atlantis/ngrok/cronjob.yaml
+++ b/atlantis/ngrok/cronjob.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: atlantis
 spec:
   # Run every 2 hours.
-  schedule: '*/55 */1 * * *'
+  schedule: '0 */2 * * *'
   jobTemplate:
     spec:
       template:
