--- a/atlantis/ngrok/job.yaml
+++ b/atlantis/ngrok/job.yaml
@@ -7,6 +7,15 @@ spec:
   template:
     spec:
       serviceAccountName: ngrok
+      initContainers:
+        - name: wait-for-atlantis
+          image: busybox
+          command:
+            [
+              'sh',
+              '-c',
+              'until nc -z atlantis.atlantis.svc.cluster.local 80 > /dev/null; do echo Waiting for atlantis to be ready; sleep 2; done;',
+            ]
       containers:
         # Update upstream webhook with new ngrok tunnel information
         - name: ngrok-startup
