fix: non test image tag

--- a/atlantis/ngrok/kustomization.yaml
+++ b/atlantis/ngrok/kustomization.yaml
@@ -16,7 +16,7 @@ images:
     newTag: '3'
   - name: kubefirst/git-helper
     newName: eb129/git-helper
-    newTag: 'testv2'
+    newTag: 'v1.0.0'
 
 generatorOptions:
   disableNameSuffixHash: true
