--- a/nginx/apex/service.yaml
+++ b/nginx/apex/service.yaml
@@ -2,14 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
-  namespace: "default"
+  namespace: default
   labels:
     app.kubernetes.io/name: nginx
     app.kubernetes.io/instance: nginx
 spec:
   type: LoadBalancer
   sessionAffinity: None
-  externalTrafficPolicy: "Cluster"
   ports:
     - name: http
       port: 80
