--- a/nginx/apex/ingress.yaml
+++ b/nginx/apex/ingress.yaml
@@ -1,27 +1,27 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: nginx
-  namespace: default
-  labels:
-    app.kubernetes.io/name: nginx
-    app.kubernetes.io/instance: nginx
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-spec:
-  rules:
-    - host: mgmt.kubefirst.com
-      http:
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: nginx
-                port:
-                  name: http
-  tls:
-  - hosts:
-    - mgmt.kubefirst.com
-    secretName: apex-tls
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: nginx
+#   namespace: default
+#   labels:
+#     app.kubernetes.io/name: nginx
+#     app.kubernetes.io/instance: nginx
+#   annotations:
+#     kubernetes.io/ingress.class: nginx
+#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+# spec:
+#   rules:
+#     - host: example.com
+#       http:
+#         paths:
+#           - path: /
+#             pathType: ImplementationSpecific
+#             backend:
+#               service:
+#                 name: nginx
+#                 port:
+#                   name: http
+#   tls:
+#   - hosts:
+#     - example.com
+#     secretName: apex-tls
