feat: custom nginx page

--- a/nginx/apex/deployment.yaml
+++ b/nginx/apex/deployment.yaml
@@ -32,6 +32,9 @@ spec:
           ports:
             - name: http
               containerPort: 8080
+          volumeMounts:
+            - name: nginx-index-file
+              mountPath: /usr/share/nginx/html/
           livenessProbe:
             failureThreshold: 6
             initialDelaySeconds: 30
@@ -51,3 +54,7 @@ spec:
           resources:
             limits: {}
             requests: {}
+      volumes:
+      - name: nginx-index-file
+        configMap:
+          name: nginx-apex-cm
