--- a/nginx/apex/kustomization.yaml
+++ b/nginx/apex/kustomization.yaml
@@ -6,5 +6,8 @@ resources:
   - deployment.yaml
   - service.yaml
 
+patchesStrategicMerge:
+  - config-map.yaml
+
 generatorOptions:
   disableNameSuffixHash: true
