--- a/nginx/apex/service.yaml
+++ b/nginx/apex/service.yaml
@@ -13,6 +13,7 @@ spec:
     app.kubernetes.io/name: nginx
     app.kubernetes.io/instance: nginx
   ports:
-    - port: 80
+    - name: http
+      port: 80
       nodePort: 32000
       targetPort: 80
