--- a/nginx/apex/deployment.yaml
+++ b/nginx/apex/deployment.yaml
@@ -21,40 +21,14 @@ spec:
         app.kubernetes.io/instance: nginx
     spec:
       containers:
-        - name: nginx
-          image: docker.io/bitnami/nginx:1.23.3-debian-11-r39
-          imagePullPolicy: "IfNotPresent"
-          env:
-            - name: BITNAMI_DEBUG
-              value: "false"
-            - name: NGINX_HTTP_PORT_NUMBER
-              value: "8080"
-          ports:
-            - name: http
-              containerPort: 8080
-          volumeMounts:
-            - name: nginx-index-file
-              mountPath: /usr/share/nginx/html
-          livenessProbe:
-            failureThreshold: 6
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            successThreshold: 1
-            timeoutSeconds: 5
-            tcpSocket:
-              port: http
-          readinessProbe:
-            failureThreshold: 3
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            successThreshold: 1
-            timeoutSeconds: 3
-            tcpSocket:
-              port: http
-          resources:
-            limits: {}
-            requests: {}
-      volumes:
+      - name: nginx
+        image: nginx
+        ports:
+        - containerPort: 80
+        volumeMounts:
         - name: nginx-index-file
-          configMap:
-            name: index-html-configmap
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: nginx-index-file
+        configMap:
+          name: index-html-configmap
