--- a/nginx/apex/service.yaml
+++ b/nginx/apex/service.yaml
@@ -15,5 +15,5 @@ spec:
   ports:
     - name: http
       port: 80
-      nodePort: 32000
-      targetPort: http
+      targetPort: 80
+      nodePort: 30001
