--- a/nginx/apex/service.yaml
+++ b/nginx/apex/service.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: nginx
     app.kubernetes.io/instance: nginx
 spec:
-  type: ClusterIP
+  type: NodePort
   sessionAffinity: None
   selector:
     app.kubernetes.io/name: nginx
@@ -15,4 +15,5 @@ spec:
   ports:
     - name: http
       port: 80
-      targetPort: http
+      targetPort: 80
+      nodePort: 30001
