--- a/argocd/k3d/kustomization.yaml
+++ b/argocd/k3d/kustomization.yaml
@@ -7,6 +7,8 @@ namespace: argocd
 resources:
   - github.com:argoproj/argo-cd.git/manifests/ha/cluster-install?ref=v2.6.4
   - argocd-namespace.yaml
+  - argocd-ui-ingress.yaml
+  - argocd-ui-ingressroute.yaml
 
 patchesStrategicMerge:
   - argocd-cm.yaml
