--- a/argocd/k3d/kustomization.yaml
+++ b/argocd/k3d/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
 
 patchesStrategicMerge:
   - argocd-cm.yaml
+  - argocd-cmd-params-cm.yaml
   - argocd-rbac-cm.yaml
 
 generatorOptions:
