--- a/argocd/k3d/argocd-cm.yaml
+++ b/argocd/k3d/argocd-cm.yaml
@@ -8,10 +8,10 @@ data:
   statusbadge.enabled: 'true'
   users.anonymous.enabled: 'false'
   server.insecure: 'true'
-  url: 'https://argocd.<DOMAIN_NAME>'
+  url: 'https://argocd.kubefirst.dev'
   oidc.config: |
     name: Vault
-    issuer: https://vault.<DOMAIN_NAME>/v1/identity/oidc/provider/kubefirst
+    issuer: https://vault.kubefirst.dev/v1/identity/oidc/provider/kubefirst
     clientID: $argocd-oidc-secret:clientId
     clientSecret: $argocd-oidc-secret:clientSecret
     requestedScopes: ["openid", "groups", "user", "profile", "email"]
