--- a/argocd/cloud/kustomization.yaml
+++ b/argocd/cloud/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - argocd-namespace.yaml
 
 patchesStrategicMerge:
+  - argocd-cm.yaml
   - argocd-cmd-params-cm.yaml
   - argocd-rbac-cm.yaml
 
